<resources>
    <string name="app_name">MoyaTransportes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Moya Corporation</string>
    <string name="nav_header_subtitle">moya.mtc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_client">Cliente</string>
    <string name="txt_route">Rota</string>
    <string name="txt_obs">Observação</string>
    <string name="txt_email_type">Tipo de email</string>
    <string name="btn_enviar">Enviar</string>
    <string name="hint_obs">Observacão</string>
    <string name="hint_route">Rota</string>

    <!-- Start of delivery message -->
    <string name="start_delivery_message">Saída para entrega no(s) seguinte(s) cliente(s): \n %1$s</string>

    <!-- End of delivery message -->
    <string name="end_delivery_message">Entrega finalizada no(s) seguinte(s) cliente(s): \n %1$s</string>

    <!-- Occurrence during delivery message -->
    <string name="occurrence_message">Ocorrência(s): \n %1$s</string>

    <string name="obs_message_text">\n\nObservação: %1$s</string>
    <string name="add_store_image">Adicionar Loja</string>

    <string-array name="client_array">
        <item>Kiviks - rafael.correia@hero.com.br</item>
        <item>SetLog - andressa.santada@hero.com.br</item>
    </string-array>

    <string-array name="email_type_array">
        <item>Início da entrega</item>
        <item>Fim da entrega</item>
        <item>Ocorrência</item>
    </string-array>

    <string-array name="store_array">
        <item>Atilatte</item>
        <item>CBD</item>
        <item>Dalben Barão</item>
        <item>Dalben Mansões</item>
        <item>Dalben Taquaral</item>
        <item>Covabra</item>
        <item>Pague Menos</item>
        <item>Rubens Lenzi</item>
        <item>Savenhago Ribeirão Preto</item>
        <item>Savenhago Araras</item>
        <item>Set Log</item>
        <item>Wallmart</item>
    </string-array>
</resources>
