<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/txt_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_client"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
            android:layout_width="263dp"
            android:layout_height="19dp"
            android:id="@+id/spinner_client" app:layout_constraintStart_toEndOf="@+id/txt_client"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/txt_email_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_client" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:id="@+id/spinner_email"
            app:layout_constraintStart_toEndOf="@+id/txt_email" android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_client" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txt_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_rota" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="376dp"
            android:layout_height="130dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etx_route" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_rota" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints="" tools:targetApi="o"
            android:hint="@string/hintt_route"/>
    <TextView
            android:text="@string/txt_obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_obs" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etx_route"/>
    <EditText
            android:layout_width="376dp"
            android:layout_height="130dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etx_obs"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txt_obs"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            tools:targetApi="o" android:hint="@string/hint_obs"/>
    <Button
            android:text="@string/btn_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_enviar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>